PCS BAckup 26Dec2023/Backup-Source/objects/Vision_DRL_Sales_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Direct_Sales__c</fullName>
        <label>Direct Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Units__c</fullName>
        <label>Direct Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indirect_Sales__c</fullName>
        <label>Indirect Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indirect_Units__c</fullName>
        <label>Indirect Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_EXT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is EXT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_INT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is INT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Current_Sales__c</fullName>
        <label>Current Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Current_TPT_Dollar__c</fullName>
        <label>Current TPT Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Current_TPT_Percent__c</fullName>
        <label>Current TPT Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Current_Units__c</fullName>
        <label>Current Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Desc__c</fullName>
        <label>Customer Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Hierarchy__c</fullName>
        <label>Customer Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DRL Sales Summarys</relationshipLabel>
        <relationshipName>DRL_Sales_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Cutomer_Hierarchy_Code__c</fullName>
        <label>Cutomer Hierarchy Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_DIVISION_DESC__c</fullName>
        <label>Division Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Is_FYTD_Vs_Previous_FYTD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is FYTD Vs Previous FYTD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Is_Last_Q_Vs_Previous_Q__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Last Q Vs Previous Q</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Is_Last_Year_Vs_Previous_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Last Year Vs Previous Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Is_OTC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is OTC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Is_Rx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Rx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Is_SRx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is SRx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Last_12_Mts_Vs_Prev_12_Mts_Sales__c</fullName>
        <label>Last 12 Months Vs Prev 12 Months Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Last_12_Mts_Vs_Prev_12_Mts_Units__c</fullName>
        <label>Last 12 Months Vs Prev 12 Months Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Last_Qtr_Vs_Previous_Qtr_Sales__c</fullName>
        <label>Last Quarter Vs Previous Quarter Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Last_Qtr_Vs_Previous_Qtr_Units__c</fullName>
        <label>Last Quarter Vs Previous Quarter Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Month_Text__c</fullName>
        <label>Month Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Previous_Sales__c</fullName>
        <label>Previous Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Previous_TPT_Dollar__c</fullName>
        <label>Previous TPT Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Previous_TPT_Percent__c</fullName>
        <label>Previous TPT Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Previous_Units__c</fullName>
        <label>Previous Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Processed_Date__c</fullName>
        <label>Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Processed_Month__c</fullName>
        <formula>CASE(MONTH(  Vision_Processed_Date__c ),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;,
4, &quot;Apr&quot;,
5, &quot;May&quot;,
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot; &quot;)+&quot;-&quot; +RIGHT(TEXT(YEAR( Vision_Processed_Date__c )) , LEN(TEXT(YEAR( Vision_Processed_Date__c ))) - 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Processed Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Sales__c</fullName>
        <label>Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Segment__c</fullName>
        <formula>IF( Vision_Is_Rx__c , &apos;Rx&apos;,  IF( Vision_Is_SRx__c , &apos;SRx&apos;, IF( Vision_Is_OTC__c , &apos;OTC&apos;, &apos;&apos;)) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Units__c</fullName>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_customer_code__c</fullName>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DRL Sales Summary</label>
    <nameField>
        <displayFormat>DRL Sales Summar-{000000}</displayFormat>
        <label>DRL Sales Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRL Sales Summarys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>